--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,42 +37,37 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
     //LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.lifecycle:reactivestreams:1.1.1"
-    implementation "android.arch.lifecycle:livedata:1.1.1"
-
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:reactivestreams:1.1.1'
+    implementation 'android.arch.lifecycle:livedata:1.1.1'
     // Lifecycles
-    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-
     //Room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'android.arch.persistence.room:rxjava2:1.1.1'
-
     //Paging
-    implementation "android.arch.paging:runtime:1.0.0"
-    implementation "android.arch.paging:rxjava2:1.0.0-rc1"
-
+    implementation 'android.arch.paging:runtime:1.0.0'
+    implementation 'android.arch.paging:rxjava2:1.0.0-rc1'
     //Rx
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
-    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
-
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'jp.wasabeef:glide-transformations:3.3.0'
-
     //indicator
     implementation 'com.romandanylyk:pageindicatorview:1.0.2'
     implementation 'com.android.support:support-core-ui:28.0.0'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
 }
