--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.pt.khanh.movie">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -20,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screen.movies.MoviesActivity"/>
+        <activity android:name=".screen.movies.MoviesActivity" />
+        <activity android:name=".screen.detail.DetailActivity"/>
     </application>
 
 </manifest>
