load data detail screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation 'com.borjabravo:readmoretextview:2.1.0'
 }
