handle click item cast

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".screen.movies.MoviesActivity" />
-        <activity android:name=".screen.detail.DetailActivity"/>
+        <activity android:name=".screen.detail.DetailActivity" />
+        <activity android:name=".screen.detail.castDetail.CastDetailActivity"></activity>
     </application>
 
 </manifest>
